--- a/app/src/main/res/layout/content_game_detail.xml
+++ b/app/src/main/res/layout/content_game_detail.xml
@@ -5,132 +5,151 @@
     tools:showIn="@layout/activity_game_detail">
 
     <data>
+
+        <import type="com.zebannikolay.capstone.presentation.UiState" />
+
         <variable
             name="viewModel"
-            type="com.zebannikolay.capstone.presentation.GameDetailsViewModel"/>
+            type="com.zebannikolay.capstone.presentation.GameDetailsViewModel" />
     </data>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:background="@color/background"
-            android:padding="@dimen/spacing_small">
+            android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
-                style="@style/AppTheme.CardView"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-
-                <LinearLayout
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:padding="@dimen/spacing_large"
-                        android:text="@string/label_summary"
-                        android:textAppearance="@style/AppTheme.TextAppearance.H5"/>
-
-                    <include layout="@layout/separator"/>
-
-                    <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:padding="@dimen/spacing_large"
-                        android:text="@{viewModel.game.summary}"
-                        android:textAppearance="@style/AppTheme.TextAppearance.Body"/>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                style="@style/AppTheme.CardView"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-
-                <LinearLayout
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:padding="@dimen/spacing_large"
-                        android:text="@string/label_rules"
-                        android:textAppearance="@style/AppTheme.TextAppearance.H5"/>
-
-                    <include layout="@layout/separator"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/download_rules"
-                        android:layout_margin="@dimen/spacing_large"
-                        android:drawableStart="@drawable/ic_file_download"
-                        android:drawablePadding="@dimen/spacing_small"
-                        style="@style/Widget.AppCompat.Button"
-                        android:onClick="@{() -> viewModel.onDownloadRules(viewModel.game.rulesUrl)}"/>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                style="@style/AppTheme.CardView"
-                android:layout_height="wrap_content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                app:visible="@{viewModel.game.videoUrl != null}">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/spacing_small"
+                app:visible="@{viewModel.uiState == UiState.CONTENT}"
+                tools:visibility="gone">
 
-                <LinearLayout
-                    android:layout_height="wrap_content"
+                <android.support.v7.widget.CardView
+                    style="@style/AppTheme.CardView"
                     android:layout_width="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:padding="@dimen/spacing_large"
-                        android:text="@string/label_review"
-                        android:textAppearance="@style/AppTheme.TextAppearance.H5"/>
-
-                    <include layout="@layout/separator"/>
-
-                    <FrameLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/spacing_large"
-                        android:onClick="@{() -> viewModel.onPlayReview(viewModel.game.videoUrl)}"
-                        android:clickable="true"
-                        android:focusable="true">
+                        android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/video_thumbnail"
+                        <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/youtoube_thumb_height"
-                            android:scaleType="centerCrop"
-                            app:youtubeImage="@{viewModel.game.videoUrl}"
-                            tools:src="@tools:sample/avatars"/>
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/spacing_large"
+                            android:text="@string/label_summary"
+                            android:textAppearance="@style/AppTheme.TextAppearance.H5" />
 
-                        <ImageView
-                            android:layout_width="72dp"
-                            android:layout_height="72dp"
-                            android:src="@drawable/ic_play_circle"
-                            android:tint="@color/colorAccent"
-                            android:layout_gravity="center"/>
-                    </FrameLayout>
+                        <include layout="@layout/separator" />
 
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/spacing_large"
+                            android:text="@{viewModel.game.summary}"
+                            android:textAppearance="@style/AppTheme.TextAppearance.Body" />
 
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    style="@style/AppTheme.CardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/spacing_large"
+                            android:text="@string/label_rules"
+                            android:textAppearance="@style/AppTheme.TextAppearance.H5" />
+
+                        <include layout="@layout/separator" />
+
+                        <Button
+                            style="@style/Widget.AppCompat.Button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/spacing_large"
+                            android:drawablePadding="@dimen/spacing_small"
+                            android:drawableStart="@drawable/ic_file_download"
+                            android:onClick="@{() -> viewModel.onDownloadRules(viewModel.game.rulesUrl)}"
+                            android:text="@string/download_rules" />
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    style="@style/AppTheme.CardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:visible="@{viewModel.game.videoUrl != null}">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/spacing_large"
+                            android:text="@string/label_review"
+                            android:textAppearance="@style/AppTheme.TextAppearance.H5" />
+
+                        <include layout="@layout/separator" />
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:onClick="@{() -> viewModel.onPlayReview(viewModel.game.videoUrl)}"
+                            android:padding="@dimen/spacing_large">
+
+                            <ImageView
+                                android:id="@+id/video_thumbnail"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/youtoube_thumb_height"
+                                android:scaleType="centerCrop"
+                                app:youtubeImage="@{viewModel.game.videoUrl}"
+                                tools:src="@tools:sample/avatars" />
+
+                            <ImageView
+                                android:layout_width="72dp"
+                                android:layout_height="72dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_play_circle"
+                                android:tint="@color/colorAccent" />
+                        </FrameLayout>
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_huge"
+                android:layout_gravity="center"
+                app:visible="@{viewModel.uiState == UiState.LOADING}" />
         </LinearLayout>
-
     </android.support.v4.widget.NestedScrollView>
 </layout>
